--- a/_posts/2018-01-01-summary-of-2018-plan-for-2019.md
+++ b/_posts/2018-01-01-summary-of-2018-plan-for-2019.md
@@ -1,8 +1,8 @@
 ---
 layout: article
-title:  "summary of 2018, plan for 2019"
+title:  "2018 was lit, plan for 2019"
 date: 2019-01-14
-uryvek: "Ok, 2018 is over... for almost 2 weeks already... I know, I'm a bit late with this blog post. Right now I’m writing this from Kokut/Kokot)) island in Thailand, which is a place where I’m spending my last week of vacation before..."
+uryvek: "Ok, 2018 is over... for almost 2 weeks already... I know, I'm a bit late with this blog post. Right now I’m writing this from Kokut/Kokot)) island in Thailand..."
 ---
 
 Ok, 2018 is over... for almost 2 weeks already... I know, I'm a bit late with this blog post.
