--- a/_posts/2018-01-01-summary-of-2018-plan-for-2019.md
+++ b/_posts/2018-01-01-summary-of-2018-plan-for-2019.md
@@ -56,7 +56,7 @@ These are some other things I’d like to do in 2019:
 
 <h3>the plan</h3>
 
-My daily routine
+<h4>My daily routine</h4>
 * 8h of sleep
 * 10min meditation
 * Workout
@@ -66,7 +66,7 @@ My daily routine
     * Less youtube, less procrastination
 * Work, Friends, Fam
 
-The content connected to my personality
+<h4>The content connected to my personality</h4>
 * Simple weekly vlog (updates and sh*t)
     * I still have to think about it
 * Podcasts
@@ -74,7 +74,7 @@ The content connected to my personality
     * PalmTalk weekly
 * More frequent IG uploads
 
-Short-term goals
+<h4>Short-term goals</h4>
 * Thailand movie
 * Document my next adventures
 * Half marathon 7 days in the row
